ensure all images are center aligned

--- a/css/my_main.css
+++ b/css/my_main.css
@@ -293,6 +293,7 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.3);
     flex-direction: column;
     width: 100%;
+    text-align: center;
   }
 
   .gallery-entry-content a {
